Fleshed out HTML as best I could. Added some image files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>My Resume</title>
+  <title>The Resume of Sherlock Holmes</title>
 
   <link rel="stylesheet" href="css/index.css">
 
@@ -14,6 +14,73 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <div class="container">
+    <header>
+      <a href="">Home</a>
+      <a href="">About</a>
+      <a href="">Past Cases</a>
+      <a href="">Contact</a>
+    </header>
+    <section class="top-section">
+      <img src="css/images/sherlock_portrait.jpg" alt="Sherlock Holmes by Sidney Paget">
+      <h1>Sherlock Holmes</h1>
+      <h2>The Original World's Greatest Detective</h2>
+      <p>I'm the original consulting detective and world-renown expert beekeeper. I've worked for Scotland Yard and for various governments on the Continent!</p>
+      <button>The Game is Afoot!</button>
+    </section>
+    <section class="mid-section">
+      <div>
+        <h2>Here's the gist...</h2>
+        <p>Don't take my word for it! You can read the tales of the good Dr. John H. Watson</p>
+      </div>
+      <div>
+        <h2>Stuff I'm Good At</h2>
+        <ul>
+          <li>Deductive and Inductive Reasoning (I even wrote a book "The Whole Art of Deduction")</li>
+          <li>Criminology (I've written several monographs)</li>
+          <li>Chemical Analysis</li>
+          <li>Theatrics and disguise!</li>
+          <li>Beekeeping!</li>
+        </ul>
+      </div>
+    </section>
+    <section class="work-history">
+      <h2>Work History</h2>
+      <table>
+          <thead>
+              <tr>
+                  <th>Yrs</th>
+                  <th>Clients</th>
+                  <th>Title</th>
+                  <th>Skills Used</th>
+              </tr>
+          </thead>
+          <tbody>
+              <tr>
+                <td>3</td>
+                <td>Cambridge Undergrads (e.g. Trevor)</td>
+                <td>Undergraduate Researcher in Chem Lab</td>
+                <td>Chemical analysis, Forensic Anthropology</td>
+              </tr>
+              <tr>
+                <td>25+</td>
+                <td>The British People and British Government and random nobility</td>
+                <td>Consulting Detective</td>
+                <td>Scientific Deduction, Chemical Analysis, Psychology</td>
+              </tr>
+              <tr>
+                <td>100</td>
+                <td>Random busybodies</td>
+                <td>Headbeekeeper</td>
+                <td>Beekeeping</td>
+              </tr>
+          </tbody>
+      </table>
+    </section>
+    <footer>
+      <p class="copyright">Copyright Awesomeness 2019</p>
+    </footer>
+  </div>
+  
 </body>
 </html>
