Almost there. Might need to fiddle with the table and fix a few thigns.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>The Resume of Sherlock Holmes</title>
 
   <link rel="stylesheet" href="css/index.css">
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
+
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -16,28 +18,33 @@
 <body>
   <div class="container">
     <header>
-      <a href="">Home</a>
-      <a href="">About</a>
-      <a href="">Past Cases</a>
-      <a href="">Contact</a>
+      <nav>
+          <a href="">Home</a>
+          <a href="">About</a>
+          <a href="">Past Cases</a>
+          <a href="">Contact</a>
+      </nav>
     </header>
     <section class="top-section">
       <img src="css/images/sherlock_portrait.jpg" alt="Sherlock Holmes by Sidney Paget">
-      <h1>Sherlock Holmes</h1>
-      <h2>The Original World's Greatest Detective</h2>
-      <p>I'm the original consulting detective and world-renown expert beekeeper. I've worked for Scotland Yard and for various governments on the Continent!</p>
-      <button>The Game is Afoot!</button>
+      <div class="sherlock_blurb">
+          <h1>Sherlock Holmes</h1>
+          <h2>The Original World's Greatest Detective</h2>
+          <p>I'm the original consulting detective and world-renown expert beekeeper. I've worked for Scotland Yard and for various governments on the Continent!</p>
+          <button>The Game is Afoot!</button>
+      </div>
+    
     </section>
     <section class="mid-section">
       <div>
         <h2>Here's the gist...</h2>
-        <p>Don't take my word for it! You can read the tales of the good Dr. John H. Watson</p>
+        <p> I am the world's greatest detective. My clients have included royalty and illustrious businessmen. I'ma lso a published author. I've written several monographs on criminology and on beekeeping. I even wrote a book "The Whole Art of Deduction"! Don't take my word for it! You can read the tales of the good Dr. John H. Watson</p>
       </div>
       <div>
         <h2>Stuff I'm Good At</h2>
         <ul>
-          <li>Deductive and Inductive Reasoning (I even wrote a book "The Whole Art of Deduction")</li>
-          <li>Criminology (I've written several monographs)</li>
+          <li>Deductive and Inductive Reasoning</li>
+          <li>Criminology </li>
           <li>Chemical Analysis</li>
           <li>Theatrics and disguise!</li>
           <li>Beekeeping!</li>
@@ -76,6 +83,13 @@
               </tr>
           </tbody>
       </table>
+    </section>
+    <section class="contact">
+      <h2>Contact Me</h2>
+      <address>
+        221b Baker St, Marylebone, <br>
+        London NW1 6XE, United Kingdom
+      </address>
     </section>
     <footer>
       <p class="copyright">Copyright Awesomeness 2019</p>
