--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="css/index.css">
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -19,10 +19,10 @@
   <div class="container">
     <header>
       <nav>
-          <a href="">Home</a>
-          <a href="">About</a>
-          <a href="">Past Cases</a>
-          <a href="">Contact</a>
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Past Cases</a>
+          <a href="#">Contact</a>
       </nav>
     </header>
     <section class="top-section">
@@ -37,11 +37,11 @@
     </section>
     <section class="mid-section">
       <div>
-        <h2>Here's the gist...</h2>
-        <p> I am the world's greatest detective. My clients have included royalty and illustrious businessmen. I'ma lso a published author. I've written several monographs on criminology and on beekeeping. I even wrote a book "The Whole Art of Deduction"! Don't take my word for it! You can read the tales of the good Dr. John H. Watson</p>
+        <h2>Here's the Gist...</h2>
+        <p> I am the world's greatest detective. My clients have included royalty and illustrious businessmen. I'ma lso a published author. I've written several monographs on criminology and on beekeeping. When it comes to detective work, I even wrote the book, "The Whole Art of Deduction"! Don't take my word for it! You can even read the accounts of the good Dr. John H. Watson!</p>
       </div>
       <div>
-        <h2>Stuff I'm Good At</h2>
+        <h2>Stuff I'm Good At:</h2>
         <ul>
           <li>Deductive and Inductive Reasoning</li>
           <li>Criminology </li>
@@ -65,13 +65,13 @@
           <tbody>
               <tr>
                 <td>3</td>
-                <td>Cambridge Undergrads (e.g. Trevor)</td>
+                <td>Cambridge Undergraduates</td>
                 <td>Undergraduate Researcher in Chem Lab</td>
                 <td>Chemical analysis, Forensic Anthropology</td>
               </tr>
               <tr>
                 <td>25+</td>
-                <td>The British People and British Government and random nobility</td>
+                <td>The British People and British Government and Misc. European Nobility</td>
                 <td>Consulting Detective</td>
                 <td>Scientific Deduction, Chemical Analysis, Psychology</td>
               </tr>
