Minor edits to content. MVP complete.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section class="mid-section">
       <div>
         <h2>Here's the Gist...</h2>
-        <p> I am the world's greatest detective. My clients have included royalty and illustrious businessmen. I'ma lso a published author. I've written several monographs on criminology and on beekeeping. When it comes to detective work, I even wrote the book, "The Whole Art of Deduction"! Don't take my word for it! You can even read the accounts of the good Dr. John H. Watson!</p>
+        <p> I am the world's greatest detective. My clients have included royalty and illustrious businessmen. I'm also a published author. I've written several monographs on criminology and on beekeeping. When it comes to detective work, I even wrote the book, "The Whole Art of Deduction"! Don't take my word for it! You can even read the accounts of the good Dr. John H. Watson!</p>
       </div>
       <div>
         <h2>Stuff I'm Good At:</h2>
@@ -78,7 +78,7 @@
               <tr>
                 <td>100</td>
                 <td>Random busybodies</td>
-                <td>Headbeekeeper</td>
+                <td>Head Beekeeper</td>
                 <td>Beekeeping</td>
               </tr>
           </tbody>
